--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,100 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy for Tiki</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      margin: 20px;
+      padding: 20px;
       max-width: 900px;
+      margin: auto;
     }
-    h1, h2, h3 {
+    h1, h2, h3, h4 {
       color: #333;
     }
-    a {
-      color: #007BFF;
-      text-decoration: none;
+    ul {
+      margin-left: 20px;
     }
-    a:hover {
-      text-decoration: underline;
+    p, li {
+      margin-bottom: 1em;
     }
   </style>
 </head>
 <body>
-  <h1>Privacy Policy for Tiki</h1>
-  <p><strong>Last updated:</strong> August 28, 2024</p>
-  <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
-  <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</p>
 
-  <h2>Interpretation and Definitions</h2>
-  <h3>Interpretation</h3>
-  <p>The words of which the initial letter is capitalized have meanings defined under the following conditions...</p>
+<h1>Privacy Policy for Tiki</h1>
+<p><strong>Last updated:</strong> August 28, 2024</p>
+<p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
+<p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the Privacy Policy Generator.</p>
 
-  <h3>Definitions</h3>
-  <ul>
-    <li><strong>Account</strong> means a unique account created for You...</li>
-    <li><strong>Affiliate</strong> means an entity that controls...</li>
-    <li><strong>Application</strong> refers to Tiki...</li>
-    <li><strong>Company</strong> refers to Tiki...</li>
-    <li><strong>Country</strong> refers to: Algeria</li>
-    <li><strong>Device</strong> means any device that can access the Service...</li>
-    <li><strong>Personal Data</strong> is any information that relates to an identified or identifiable individual.</li>
-    <li><strong>Service</strong> refers to the Application.</li>
-    <li><strong>Service Provider</strong> means any natural or legal person...</li>
-    <li><strong>Usage Data</strong> refers to data collected automatically...</li>
-    <li><strong>You</strong> means the individual accessing or using the Service...</li>
-  </ul>
+<h2>Interpretation and Definitions</h2>
+<h3>Interpretation</h3>
+<p>The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
 
-  <h2>Collecting and Using Your Personal Data</h2>
-  <h3>Types of Data Collected</h3>
-  <h4>Personal Data</h4>
-  <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information...</p>
+<h3>Definitions</h3>
+<ul>
+  <li><strong>Account</strong> means a unique account created for You to access our Service or parts of our Service.</li>
+  <li><strong>Affiliate</strong> means an entity that controls, is controlled by or is under common control with a party...</li>
+  <li><strong>Application</strong> refers to Tiki, the software program provided by the Company.</li>
+  <li><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our") refers to Tiki.</li>
+  <li><strong>Country</strong> refers to: Algeria</li>
+  <li><strong>Device</strong> means any device that can access the Service...</li>
+  <li><strong>Personal Data</strong> is any information that relates to an identified or identifiable individual.</li>
+  <li><strong>Service</strong> refers to the Application.</li>
+  <li><strong>Service Provider</strong> means any natural or legal person who processes the data on behalf of the Company...</li>
+  <li><strong>Usage Data</strong> refers to data collected automatically...</li>
+  <li><strong>You</strong> means the individual accessing or using the Service...</li>
+</ul>
 
-  <h4>Usage Data</h4>
-  <p>Usage Data is collected automatically when using the Service...</p>
+<h2>Collecting and Using Your Personal Data</h2>
+<h3>Types of Data Collected</h3>
+<h4>Personal Data</h4>
+<p>While using Our Service, We may ask You to provide Us with certain personally identifiable information...</p>
+<ul>
+  <li>Email address</li>
+  <li>First name and last name</li>
+  <li>Phone number</li>
+  <li>Address, State, Province, ZIP/Postal code, City</li>
+  <li>Usage Data</li>
+</ul>
 
-  <h3>Use of Your Personal Data</h3>
-  <p>The Company may use Personal Data for the following purposes...</p>
+<h4>Usage Data</h4>
+<p>Usage Data is collected automatically when using the Service...</p>
 
-  <h3>Sharing of Your Personal Data</h3>
-  <p>We may share Your personal information in the following situations...</p>
+<h3>Use of Your Personal Data</h3>
+<ul>
+  <li>To provide and maintain our Service</li>
+  <li>To manage Your Account</li>
+  <li>For the performance of a contract</li>
+  <li>To contact You</li>
+  <li>To provide You with news and offers</li>
+  <li>To manage Your requests</li>
+  <li>For business transfers</li>
+  <li>For other purposes such as analytics and service improvement</li>
+</ul>
 
-  <h2>Advertising</h2>
-  <p>We use <strong>Google AdMob</strong> to serve advertisements in our app. AdMob may collect and use data from your device, including your IP address, device ID, and app usage data, in order to show personalized or non-personalized ads.</p>
-  <p>To understand how Google uses this data, please visit:<br />
-  <a href="https://policies.google.com/technologies/ads" target="_blank">https://policies.google.com/technologies/ads</a></p>
-  <p>You can choose to opt out of personalized ads by adjusting your device settings or app preferences, depending on your region.</p>
+<h3>Sharing Your Personal Data</h3>
+<ul>
+  <li>With Service Providers</li>
+  <li>For business transfers</li>
+  <li>With Affiliates</li>
+  <li>With business partners</li>
+  <li>With other users</li>
+  <li>With Your consent</li>
+</ul>
 
-  <h2>Retention of Your Personal Data</h2>
-  <p>The Company will retain Your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy...</p>
+<h2>Retention of Your Personal Data</h2>
+<p>The Company will retain Your Personal Data only for as long as is necessary...</p>
 
-  <h2>Transfer of Your Personal Data</h2>
-  <p>Your information, including Personal Data, is processed at the Company's operating offices...</p>
+<h2>Transfer of Your Personal Data</h2>
+<p>Your information may be transferred to — and maintained on — computers located outside of Your state...</p>
 
-  <h2>Delete Your Personal Data</h2>
-  <p>You have the right to delete or request that We assist in deleting the Personal Data that We have collected about You...</p>
+<h2>Delete Your Personal Data</h2>
+<p>You have the right to delete or request that We assist in deleting the Personal Data that We have collected about You...</p>
 
-  <h2>Disclosure of Your Personal Data</h2>
-  <p>Under certain circumstances, the Company may be required to disclose Your Personal Data...</p>
+<h2>Disclosure of Your Personal Data</h2>
+<ul>
+  <li><strong>Business Transactions</strong>: If the Company is involved in a merger, acquisition or asset sale...</li>
+  <li><strong>Law enforcement</strong>: Required to do so by law or in response to valid requests...</li>
+  <li><strong>Other legal requirements</strong>: Necessary to comply with a legal obligation...</li>
+</ul>
 
-  <h2>Security of Your Personal Data</h2>
-  <p>The security of Your Personal Data is important to Us, but remember that no method of transmission...</p>
+<h2>Security of Your Personal Data</h2>
+<p>We strive to use commercially acceptable means to protect Your Personal Data...</p>
 
-  <h2>Children's Privacy</h2>
-  <p>Our Service does not address anyone under the age of 13...</p>
+<h2>Children's Privacy</h2>
+<p>Our Service does not address anyone under the age of 13...</p>
 
-  <h2>Links to Other Websites</h2>
-  <p>Our Service may contain links to other websites that are not operated by Us...</p>
+<h2>Links to Other Websites</h2>
+<p>Our Service may contain links to other websites that are not operated by Us...</p>
 
-  <h2>Changes to this Privacy Policy</h2>
-  <p>We may update Our Privacy Policy from time to time...</p>
+<h2>Changes to this Privacy Policy</h2>
+<p>We may update Our Privacy Policy from time to time...</p>
 
-  <h2>Contact Us</h2>
-  <p>If you have any questions about this Privacy Policy, You can contact us:<br />
-  By email: <a href="mailto:tiki.user@proton.me">tiki.user@proton.me</a>
-  </p>
+<h2>Contact Us</h2>
+<p>If you have any questions about this Privacy Policy, You can contact us:<br>
+By email: <a href="mailto:tiki.user@proton.me">tiki.user@proton.me</a></p>
+
+<h2>AdMob and Advertising</h2>
+<p>We use Google AdMob to show ads in the Tiki app. AdMob may collect device and usage data to show personalized or non-personalized ads depending on your preferences and consent settings.</p>
+<p>For more details on how Google uses your data, see <a href="https://policies.google.com/technologies/ads" target="_blank">Google's Advertising Policies</a>.</p>
+<p>As required, users in regions such as the EEA, UK, and Switzerland may be prompted for consent. We recommend using a Google-certified Consent Management Platform (CMP) if applicable.</p>
+
+<p><em>Generated using Privacy Policies Generator</em></p>
+
 </body>
 </html>
