--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -78,6 +78,7 @@
         <li><strong>For other purposes</strong> We may use Your information for other purposes, such as data analysis, identifying usage trends, determining the effectiveness of our promotional campaigns and to evaluate and improve our Service, products, services, marketing and your experience.</li/>
         
      </ul>
+  
   <h3>Sharing of Your Personal Data</h3>
   <p>We may share Your personal information in the following situations:</p>
      <ul>
@@ -88,6 +89,7 @@
         <li><strong>With other users:</strong> when You share personal information or otherwise interact in the public areas with other users, such information may be viewed by all users and may be publicly distributed outside.</li>
         <li><strong>With Your consent:</strong> We may disclose Your personal information for any other purpose with Your consent.</li>
      </ul>
+  
   <h2>Advertising</h2>
   <p>We use <strong>Google AdMob</strong> to serve advertisements in our app. AdMob may collect and use data from your device, including your IP address, device ID, and app usage data, in order to show personalized or non-personalized ads.</p>
   <p>To understand how Google uses this data, please visit:<br />
@@ -95,17 +97,23 @@
   <p>You can choose to opt out of personalized ads by adjusting your device settings or app preferences, depending on your region.</p>
 
   <h2>Retention of Your Personal Data</h2>
-  <p>The Company will retain Your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy...</p>
-
+  <p>The Company will retain Your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use Your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes, and enforce our legal agreements and policies.</p>
+  <p>The Company will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of Our Service, or We are legally obligated to retain this data for longer time periods.</p>
+  
   <h2>Transfer of Your Personal Data</h2>
-  <p>Your information, including Personal Data, is processed at the Company's operating offices...</p>
-
+  <p>Your information, including Personal Data, is processed at the Company's operating offices and in any other places where the parties involved in the processing are located. It means that this information may be transferred to — and maintained on — computers located outside of Your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from Your jurisdiction.</p>
+  <p>Your consent to this Privacy Policy followed by Your submission of such information represents Your agreement to that transfer.</p>
+  <p>The Company will take all steps reasonably necessary to ensure that Your data is treated securely and in accordance with this Privacy Policy and no transfer of Your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of Your data and other personal information.</p>
+  
   <h2>Delete Your Personal Data</h2>
   <p>You have the right to delete or request that We assist in deleting the Personal Data that We have collected about You...</p>
 
   <h2>Disclosure of Your Personal Data</h2>
-  <p>Under certain circumstances, the Company may be required to disclose Your Personal Data...</p>
-
+  <p>You have the right to delete or request that We assist in deleting the Personal Data that We have collected about You.</p>
+  <p>Our Service may give You the ability to delete certain information about You from within the Service.</p>
+  <p>You may update, amend, or delete Your information at any time by signing in to Your Account, if you have one, and visiting the account settings section that allows you to manage Your personal information. You may also contact Us to request access to, correct, or delete any personal information that You have provided to Us.</p>
+  <p>Please note, however, that We may need to retain certain information when we have a legal obligation or lawful basis to do so.</p>
+  
   <h2>Security of Your Personal Data</h2>
   <p>The security of Your Personal Data is important to Us, but remember that no method of transmission...</p>
 
